test/parser/exercise/struct_decl_error.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
struct Error {
    r: number,
    let g = 0,
    // CHECK: [[# @LINE -1 ]]:5: error: expected field declaration
    b: number,
}
